@@ -9,6 +9,8 @@ master
    catalog file, see #50)
  - enable opting for physical unit conversion switch to go to displacement or
    acceleration (so far always was converting to velocity; see #43)
+ - use obspy read_inventory() and Inventory/Response objects internally for
+   all metadata, regardless of source (see #77)
 
 0.5.1
  - fix getting metadata via arclink (see #65)
